package com.gabeefranco.jogo21;

public enum Naipe {
    OUROS, PAUS, COPAS, ESPADAS
}
